--- a/styles/my-theme.less
+++ b/styles/my-theme.less
@@ -1,8 +1,8 @@
 @import '~antd/lib/style/themes/default.less';
 @import '~antd/dist/antd.less';
 
-@primary-color: #d55342; // primary color for all components
-@link-color: #1890ff; // link color
+@primary-color: #5680E9; // primary color for all components
+@link-color: @primary-color; // link color old: #1890ff
 @success-color: #52c41a; // success state color
 @warning-color: #faad14; // warning state color
 @error-color: #f5222d; // error state color
@@ -15,3 +15,7 @@
 @border-color-base: #d9d9d9; // major border color
 @box-shadow-base: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08),
   0 9px 28px 8px rgba(0, 0, 0, 0.05); // major shadow for layers
+
+body {
+  background: #f1f2f5;
+}
